fixed bugs [1,2,3] on TABLET

--- a/src/style/_mobile.scss
+++ b/src/style/_mobile.scss
@@ -214,7 +214,6 @@
                 border-radius: 6px;
                 z-index: 5;
                 margin-right: 15px;
-                height: fit-content;
                 flex-direction: column;
             }
             .item__description div{
